// <auto-generated>
// Generated by RemoteMvvmTool.
// </auto-generated>

syntax = "proto3";

package sampleapp_viewmodels_protos;

option csharp_namespace = "SampleApp.ViewModels.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the SampleViewModel
message SampleViewModelState {
  string name = 1; // Original C#: string Name
  int32 count = 2; // Original C#: int Count
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
  // Optional fields for complex property updates
  string property_path = 3;          // For nested properties like "User.Address.Street"
  string collection_key = 4;         // For dictionary keys
  string operation_type = 5;         // "set", "add", "remove", "clear", "insert"
  string client_id = 6;             // Originating client identifier
}

message UpdatePropertyValueResponse {
  bool success = 1;
  string error_message = 2;          // Error details if success=false
  string validation_errors = 3;      // Validation error details
  google.protobuf.Any old_value = 4; // Previous value for undo operations
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
  // Enhanced notification details
  string property_path = 3;          // Full path for nested changes
  string change_type = 4;            // "property", "collection", "nested"
  google.protobuf.Any old_value = 5; // Previous value
}

message IncrementCountRequest {}
message IncrementCountResponse {}

message DelayedIncrementRequest {
  int32 delay_milliseconds = 1; // Original C#: int delayMilliseconds
}
message DelayedIncrementResponse {}

message SetNameToValueRequest {
  string value = 1; // Original C#: string? value
}
message SetNameToValueResponse {}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service CounterService {
  rpc GetState (google.protobuf.Empty) returns (SampleViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (UpdatePropertyValueResponse);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc IncrementCount (IncrementCountRequest) returns (IncrementCountResponse);
  rpc DelayedIncrement (DelayedIncrementRequest) returns (DelayedIncrementResponse);
  rpc SetNameToValue (SetNameToValueRequest) returns (SetNameToValueResponse);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}

